@@ -1,3 +1,8 @@
+2004-09-26  Bart Hakvoort  <gparted@users.sf.net>
+
+	*	src/Win_GParted.cc: fixed bug with check for max amount of partitions while pasting a copied partition.
+
+
 2004-09-25  Raphael Higino  <raphaelh@cvs.gnome.org>
 
 	*	src/Win_GParted.cc: Fixed typo bugs (word "than" written 
